Fixed comments from PR review